Fixed the index.html spacing on mobile

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -98,15 +98,15 @@ body {
   position: absolute;
   z-index: 1;
   margin-top:75px;
-  width: 80%;
-  margin-left: 10%;
+  width:85%;
+  margin-left:7.5%;
 }
 
 #mobileprojects img {
   width:100%;
   height:20vh;
   object-fit: cover;
-  margin-bottom:5%;
+  margin-bottom:3.25%;
 }
 
 #mobileprojects h1 {
@@ -157,7 +157,7 @@ body {
   background-color: white;
 }
 .mobileheader {
-  padding-top:22.5%;
+  padding-top:12.5%;
 }
 
 #mobileview .mobileheader h1 {
@@ -178,6 +178,7 @@ body {
   background-color: #959595;
   color:white;
   line-height:25px;
+  margin-top:0px;
 }
 
 .mobiletext p {
